# dollar-rates

./: .gitignore  Cargo.toml  Dockerfile  README.md  Shuttle.toml  render.yaml
migrations/: 0001_initial.sql
src/: fetchers.rs  main.rs
